fixed photos, skiplinks and navigation alignment

--- a/my-styles.css
+++ b/my-styles.css
@@ -17,7 +17,7 @@ font-family: 'Source Serif Pro', serif;  'EB Garamond', serif;*/
   position: relative;
   padding: unset;
   margin: unset;
-  font-size: 1rem; 
+  font-size: 2rem;
 }
 
 html{
@@ -216,9 +216,4 @@ address {
     width: 25%;
   }
 }
-/*width specifically for one image*/
-
-img.autumn-bowls/ingredients.jpeg {
-  height: 200px;
-  width: auto;
-}
+/*width specifically for top image of autumn bowls*/
